# budget-cli

./: Cargo.toml  LICENCE  README.md  database.sqlite
.config/: bud.toml  default.toml
data/: budget.data.csv  database.sqlite
src/: config.rs  database.rs  db.rs  lib.rs  main.rs  utils.rs
src/cli/: add.rs  database.rs  get.rs  mod.rs
src/utils/: data_store.rs
