[package]
name = "bud"
version = "0.1.0"
description = "Welcome from Budget CLI, your go-to command-line interface for personal finance management"
edition = "2021"
license = "MIT"

[dependencies]
clap = { version = "4.4.8", features = ["derive"] }
thiserror = "1.0.50"
csv = "1.3.0"
owo-colors = "3.5.0"
simsearch = "0.2.4"
blake3 = "1.5.0"
hex = "0.4.3"

[dev-dependencies]
anyhow = "1.0.75"
