[package]
name = "bud"
version = "0.1.0"
description = "Welcome from Budget CLI, your go-to command-line interface for personal finance management"
edition = "2021"
license = "MIT"

[dependencies]
clap = { version = "4.4.8", features = ["derive"] }
color-eyre = "0.6.2"
config = { version = "0.13.4", features = ["toml"] }
serde = { version = "1.0.193", features = ["derive"] }
rusqlite = { version = "0.30.0", features = ["bundled"] }
time = { version = "0.3.30", features = ["parsing", "local-offset"] }
